# grimmore

./: .gitignore  Cargo.toml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: actionlint.yaml
.github/workflows/: phase-01-native-gate.yml
apps/obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package.json  styles.css  tsconfig.json
apps/obsidian-plugin/src/: main.ts  review-modals.ts  settings.ts  startup-metrics.ts
apps/obsidian-plugin/src/companion/: index-reconciliation.ts  plugin-session-client.ts
apps/obsidian-plugin/src/vault/: patch-review.ts  revision.ts  vault-process-writer.ts
apps/obsidian-plugin/tests/: index-reconciliation.spec.ts  revision-and-review.spec.ts  startup-metrics.spec.ts
crates/grimmore-core/: Cargo.toml
crates/grimmore-core/src/: auth.rs  credentials.rs  endpoint.rs  framing.rs  lib.rs  protocol.rs  revision.rs  session.rs
crates/grimmore-launcher/: Cargo.toml
crates/grimmore-launcher/src/: main.rs
crates/grimmore-windows-native/: Cargo.toml
crates/grimmore-windows-native/src/: lib.rs  pipe_name.rs  windows.rs
crates/grimmored/: Cargo.toml
crates/grimmored/benches/: vertical_slice.rs
crates/grimmored/src/: lib.rs  main.rs  vault_watcher.rs
crates/grimmored/src/ipc/: connection.rs  mod.rs  unix.rs  windows.rs
crates/grimmored/src/mcp/: local.rs  mod.rs
crates/grimmored/src/storage/: mod.rs
crates/grimmored/src/vault_index/: mod.rs
crates/grimmored/tests/: authenticated_ipc.rs  doctor.rs  performance_gate.rs  vault_index.rs  vault_watcher.rs
installers/linux/: install.sh  rollback.sh
installers/macos/: install.sh  release-common.sh  rollback.sh
installers/windows/: install.ps1  release-common.psm1  rollback.ps1
release/: create-macos-release-envelope.sh  create-slice-manifest.mjs  create-windows-release-envelope.ps1  manifest.schema.json  notarize-macos-release.sh  package-macos-payload.sh  package-macos-release.sh  targets.toml
tests/fixtures/vaults/reference-vault/: PROVENANCE.md
tests/fixtures/vaults/reference-vault/.obsidian/: app.json
tests/fixtures/vaults/reference-vault/daily/: 2026-07-13.md
tests/fixtures/vaults/reference-vault/knowledge/ai/: context-engineering.md
tests/fixtures/vaults/reference-vault/projects/: grimmore.md
tests/release/: installed-lifecycle.mjs  macos-signed-install-rollback.sh  obsidian-desktop-smoke.mjs  slice-install-rollback.mjs  windows-signed-install-rollback.ps1
