[workspace]
members = [
  "crates/grimmore-core",
  "crates/grimmore-launcher",
  "crates/grimmore-windows-native",
  "crates/grimmored",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.93"
publish = false

[workspace.dependencies]
anyhow = "=1.0.103"
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
criterion = { version = "=0.8.2", default-features = false, features = ["cargo_bench_support"] }
directories = "=6.0.0"
getrandom = { version = "=0.4.3", features = ["std"] }
grimmore-core = { path = "crates/grimmore-core" }
hex = "=0.4.3"
hmac = { version = "=0.13.0", features = ["zeroize"] }
keyring = "=4.1.4"
notify = "=8.2.0"
rmcp = { version = "=2.2.0", features = ["server", "transport-io"] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
schemars = "=1.2.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "=0.7.18", features = ["rt"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
walkdir = "=2.5.0"
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Pipes", "Win32_System_Threading"] }
zeroize = { version = "=1.9.0", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
