[package]
name = "grimmore-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
directories.workspace = true
getrandom.workspace = true
hex.workspace = true
hmac.workspace = true
keyring.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
grimmore-windows-native = { path = "../grimmore-windows-native" }

[lints]
workspace = true
