[package]
name = "grimmore-windows-native"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
windows-sys.workspace = true

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
undocumented_unsafe_blocks = "deny"
